Resolve issue with prices table spilling out of view on mobile

--- a/_assets/stylesheets/_responsive.scss
+++ b/_assets/stylesheets/_responsive.scss
@@ -56,6 +56,14 @@
         p {
             font-size:0.9em;
         }
+
+        table {
+            table-layout: fixed;
+        }
+
+        table td {
+            word-wrap: break-word;
+        }
     }
 
     .blog-cover {
